--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "topos-bbva",
+  "description": "Juego de topos",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "author": {
+    "name": "Joel Campos Oliva",
+    "url": "https://github.com/TheMineWay"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TheMineWay/topos-bbva"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "biome format --write",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,18 +23,15 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.13",
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "^1.0.0",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
   }
 }
