--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@tanstack/react-router": "^1.157.16",
+		"@tanstack/react-router-devtools": "^1.157.16",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.13",
 		"@eslint/js": "^9.39.1",
+		"@tanstack/router-plugin": "^1.157.16",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
