--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@mantine/core": "^8.3.13",
+		"@mantine/hooks": "^8.3.13",
 		"@tanstack/react-router": "^1.157.16",
 		"@tanstack/react-router-devtools": "^1.157.16",
 		"react": "^19.2.0",
@@ -34,6 +36,9 @@
 		"@vitejs/plugin-react": "^5.1.1",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"globals": "^16.5.0",
+		"postcss": "^8.5.6",
+		"postcss-preset-mantine": "^1.18.0",
+		"postcss-simple-vars": "^7.0.1",
 		"typescript": "~5.9.3",
 		"vite": "^7.2.4"
 	}
