--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,12 @@
 {
 	"compilerOptions": {
+		"baseUrl": "./src",
+		"paths": {
+			"@assets/*": ["assets/*"],
+			"@common/*": ["common/*"],
+			"@features/*": ["features/*"],
+			"@layouts/*": ["layouts/*"]
+		},
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"target": "ES2023",
 		"lib": ["ES2023"],
