--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@mantine/hooks": "^8.3.13",
 		"@tanstack/react-router": "^1.157.16",
 		"@tanstack/react-router-devtools": "^1.157.16",
+		"clsx": "^2.1.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0"
 	},
