--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"@tanstack/react-router-devtools": "^1.157.16",
 		"clsx": "^2.1.1",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
+		"react-dom": "^19.2.0",
+		"react-hook-form": "^7.71.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.13",
