feat: registration UI

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"@mantine/core": "^8.3.13",
 		"@mantine/hooks": "^8.3.13",
+		"@tabler/icons-react": "^3.36.1",
 		"@tanstack/react-router": "^1.157.16",
 		"@tanstack/react-router-devtools": "^1.157.16",
 		"clsx": "^2.1.1",
