--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
 		"@mantine/core": "^8.3.13",
 		"@mantine/hooks": "^8.3.13",
 		"@tabler/icons-react": "^3.36.1",
@@ -27,7 +28,8 @@
 		"clsx": "^2.1.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
-		"react-hook-form": "^7.71.1"
+		"react-hook-form": "^7.68.0",
+		"zod": "^4.2.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.13",
