--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
 		"@tanstack/react-router": "^1.157.16",
 		"@tanstack/react-router-devtools": "^1.157.16",
 		"clsx": "^2.1.1",
+		"i18next": "^25.8.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-hook-form": "^7.68.0",
+		"react-i18next": "^16.5.4",
 		"zod": "^4.2.0"
 	},
 	"devDependencies": {
