--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,7 +5,8 @@
 			"@assets/*": ["assets/*"],
 			"@common/*": ["common/*"],
 			"@features/*": ["features/*"],
-			"@layouts/*": ["layouts/*"]
+			"@layouts/*": ["layouts/*"],
+			"@i18n/*": ["i18n/*"]
 		},
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"target": "ES2023",
