--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"postcss-preset-mantine": "^1.18.0",
 		"postcss-simple-vars": "^7.0.1",
 		"typescript": "~5.9.3",
-		"vite": "^7.2.4"
+		"vite": "^7.2.4",
+		"vite-plugin-pwa": "^1.2.0"
 	}
 }
