feat: theme switch

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,7 @@
 			"@common/*": ["common/*"],
 			"@features/*": ["features/*"],
 			"@layouts/*": ["layouts/*"],
+			"@providers/*": ["providers/*"],
 			"@i18n/*": ["i18n/*"]
 		},
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
