--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
 		"postcss-simple-vars": "^7.0.1",
 		"typescript": "~5.9.3",
 		"vite": "^7.2.4",
-		"vite-plugin-pwa": "^1.2.0"
+		"vite-plugin-pwa": "^1.2.0",
+		"vitest": "^4.0.18"
 	},
 	"engines": {
 		"node": ">=20.0.0"
