--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-	"recommendations": ["biomejs.biome", "sonarsource.sonarlint-vscode"]
+	"recommendations": [
+		"biomejs.biome",
+		"sonarsource.sonarlint-vscode",
+		"vitest.explorer"
+	]
 }
