--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
 		"@vitejs/plugin-react": "^5.1.1",
+		"@vitest/browser-playwright": "^4.0.18",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"globals": "^16.5.0",
 		"postcss": "^8.5.6",
@@ -51,7 +52,8 @@
 		"typescript": "~5.9.3",
 		"vite": "^7.2.4",
 		"vite-plugin-pwa": "^1.2.0",
-		"vitest": "^4.0.18"
+		"vitest": "^4.0.18",
+		"vitest-browser-react": "^2.0.5"
 	},
 	"engines": {
 		"node": ">=20.0.0"
