--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,10 @@ dist-ssr
 
 # PWA
 /dev-dist
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
