--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"lint": "biome format --write",
 		"preview": "vite preview",
 		"test": "vitest",
-		"test:dev": "vitest --watch"
+		"test:dev": "vitest --watch",
+		"e2e": "playwright test",
+		"e2e:dev": "playwright test --ui"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
@@ -38,6 +40,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.13",
 		"@eslint/js": "^9.39.1",
+		"@playwright/test": "^1.58.0",
 		"@tanstack/router-plugin": "^1.157.16",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
