--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"test": "vitest",
 		"test:dev": "vitest --watch",
 		"e2e": "playwright test",
-		"e2e:dev": "playwright test --ui"
+		"e2e:dev": "playwright test --ui",
+		"e2e:report": "playwright show-report"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
@@ -38,6 +39,7 @@
 		"zod": "^4.2.0"
 	},
 	"devDependencies": {
+		"@axe-core/playwright": "^4.11.0",
 		"@biomejs/biome": "2.3.13",
 		"@eslint/js": "^9.39.1",
 		"@playwright/test": "^1.58.0",
