--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@tanstack/react-router": "^1.157.16",
 		"@tanstack/react-router-devtools": "^1.157.16",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"i18next": "^25.8.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
