--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
         run: pnpm install
 
       - name: 🔨 Build the app
-        run: pnpm run build
+        run: GITHUB_PAGES=true pnpm run build
 
       - name: 🔄 Upload artifact
         uses: actions/upload-pages-artifact@v3
